<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="E_DIAGNOSISTYPE" Id="{9b10da99-659b-4bb5-bdfb-03993909bc0c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
TYPE E_DIAGNOSISTYPE :
(
    InfoMessage := 0,
    WarningMessage := 1,
    ErrorMessage := 2,
    Unspecified := 3
) BYTE;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>