<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_FLAGS" Id="{a22c0de0-4aa7-4870-8fcb-0380fc972d78}">
    <Declaration><![CDATA[TYPE ST_FLAGS :
STRUCT
    eDiagnosisType : E_DIAGNOSISTYPE;
    eTimeStampType : E_TIMESTAMPTYPE;
    nNumberOfParametersInDiagnosisMessage : USINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>